--- a/src/tailwindcss.css
+++ b/src/tailwindcss.css
@@ -1303,6 +1303,7 @@ a, button {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
   transition-duration: 300ms;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .sticky {
