--- a/src/tailwindcss.css
+++ b/src/tailwindcss.css
@@ -449,6 +449,453 @@ a {
   text-decoration: inherit;
 }
 
+
+/* .w-screen */
+.w-screen {
+  width: 100vw;
+}
+
+/* .relative */
+.relative {
+  position: relative;
+}
+
+/* .mx-auto */
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* .mt-20 */
+.mt-20 {
+  margin-top: 5rem;
+}
+
+/* .mb-20 */
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+/* .max-w-screen-lg */
+.max-w-screen-lg {
+  max-width: 1024px;
+}
+
+/* .overflow-hidden */
+.overflow-hidden {
+  overflow: hidden;
+}
+
+/* .rounded-t-xl */
+.rounded-t-xl {
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+/* .font-medium */
+.font-medium {
+  font-weight: 500;
+}
+
+/* .text-xs */
+.text-xs {
+  font-size: 0.75rem;
+}
+
+/* .uppercase */
+.uppercase {
+  text-transform: uppercase;
+}
+
+/* .mt-8 */
+.mt-8 {
+  margin-top: 2rem;
+}
+
+/* .font-serif */
+.font-serif {
+  font-family: serif;
+}
+
+/* .text-blue-900 */
+.text-blue-900 {
+  color: #2a4365;
+}
+
+/* .w-56 */
+.w-56 {
+  width: 14rem;
+}
+
+/* .pointer-events-none */
+.pointer-events-none {
+  pointer-events: none;
+}
+
+/* .absolute */
+.absolute {
+  position: absolute;
+}
+
+/* .inset-y-0 */
+.inset-y-0 {
+  top: 0;
+  bottom: 0;
+}
+
+/* .left-0 */
+.left-0 {
+  left: 0;
+}
+
+/* .flex */
+.flex {
+  display: flex;
+}
+
+/* .items-center */
+.items-center {
+  align-items: center;
+}
+
+/* .pl-3 */
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
+/* .text-gray-500 */
+.text-gray-500 {
+  color: #718096;
+}
+
+/* .h-5 */
+.h-5 {
+  height: 1.25rem;
+}
+
+/* .w-5 */
+.w-5 {
+  width: 1.25rem;
+}
+
+/* .fill-current */
+.fill-current {
+  fill: currentColor;
+}
+
+.w-56 {
+  width: 14rem;
+}
+
+
+
+/* .datepicker-input */
+.datepicker-input {
+  display: block;
+  width: 100%;
+  border-radius: 0.75rem;
+  --tw-text-opacity: 1;
+  color: rgba(249, 79, 79, var(--tw-text-opacity));
+  background-color: #faf7f7;
+  padding: 0.625rem;
+  padding-left: 2.5rem;
+  outline: none;
+  ring-opacity: 0.3;
+  placeholder:text-emerald-800;
+  transition: background-color 0.2s;
+  font-size: 1rem;
+}
+
+.focus\:ring-emerald-300:focus {
+  ring-color: #2ece71;
+}
+
+/* .sm:text-sm */
+.sm\:text-sm {
+  @media (min-width: 640px) {
+    font-size: 0.875rem;
+  }
+}
+
+/* .mt-8 */
+.mt-8 {
+  margin-top: 2rem;
+}
+
+/* .lg:max-w-xl */
+.lg\:max-w-xl {
+  @media (min-width: 1024px) {
+    max-width: 48rem;
+  }
+}
+
+/* .grid-cols-4 */
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+/* .gap-2 */
+.gap-2 > * + * {
+  grid-column-gap: 0.5rem;
+  grid-row-gap: 0.5rem;
+}
+
+/* .rounded-lg */
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+/* .bg-emerald-100 */
+.bg-emerald-100 {
+  background-color: #d1fae5;
+}
+
+/* .px-4 */
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+/* .py-2 */
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+/* .font-medium */
+.font-medium {
+  font-weight: 500;
+}
+
+/* .text-emerald-900 */
+.text-emerald-900 {
+  color: #2ece71;
+}
+
+.active\:scale-95:active {
+  transform: scale(0.95);
+}
+
+/* .rounded-full */
+.rounded-full {
+  border-radius: 9999px;
+}
+
+/* .border-8 */
+.border-8 {
+  border-width: 2rem;
+}
+
+/* .border-emerald-500 */
+.border-emerald-500 {
+  border-color: #10b981;
+}
+
+/* .bg-emerald-600 */
+.bg-emerald-600 {
+  background-color: #10b981;
+}
+
+/* .px-10 */
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+/* .py-4 */
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+/* .hover:translate-y-1 */
+.hover\:translate-y-1:hover {
+  transform: translateY(0.25rem);
+}
+
+/* .py-32 */
+.py-32 {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+
+/* .text-center */
+.text-center {
+  text-align: center;
+}
+
+/* .shadow-xl */
+.shadow-xl {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+}
+
+/* .shadow-gray-300 */
+.shadow-gray-300 {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+/* .text-3xl */
+.text-3xl {
+  font-size: 1.875rem;
+}
+
+/* .font-bold */
+.font-bold {
+  font-weight: 700;
+}
+
+/* .text-white */
+.text-white {
+  color: #fff;
+}
+
+/* .md:text-5xl */
+.md\:text-5xl {
+  @media (min-width: 768px) {
+    font-size: 3.125rem;
+  }
+}
+
+/* .mt-2 */
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+/* .px-8 */
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+/* .mt-6 */
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+/* .text-lg */
+.text-lg {
+  font-size: 1.125rem;
+}
+
+/* .mt-4 */
+.mt-4 {
+  margin-top: 1rem;
+}
+
+/* .grid */
+.grid {
+  display: grid;
+}
+
+/* .gap-x-4 */
+.gap-x-4 > * + * {
+  grid-column-gap: 1rem;
+}
+
+/* .gap-y-3 */
+.gap-y-3 > * + * {
+  grid-row-gap: 0.75rem;
+}
+
+/* .sm:grid-cols-2 */
+.sm\:grid-cols-2 {
+  @media (min-width: 640px) {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+/* .md:grid-cols-3 */
+.md\:grid-cols-3 {
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+/* .box-content */
+.box-content {
+  box-sizing: content-box;
+}
+
+/* .block */
+.block {
+  display: block;
+}
+
+/* .h-3 */
+.h-3 {
+  height: 0.75rem;
+}
+
+/* .w-3 */
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-375 {
+  width:375px;
+}
+
+/* .-translate-y-1/2 */
+
+/* .rounded-full */
+.rounded-full {
+  border-radius: 9999px;
+}
+
+/* .border-8 */
+.border-8 {
+  border-width: 2rem;
+}
+
+/* .border-gray-300 */
+.border-gray-300 {
+  border-color: #e2e8f0;
+}
+
+/* .bg-white */
+.bg-white {
+  background-color: #fff;
+}
+
+/* .peer-checked:border-emerald-400 */
+.peer-checked\:border-emerald-400:checked {
+  border-color: #2ece71;
+}
+
+/* .flex */
+.flex {
+  display: flex;
+}
+
+/* .cursor-pointer */
+.cursor-pointer {
+  cursor: pointer;
+}
+
+/* .flex-col */
+.flex-col {
+  flex-direction: column;
+}
+
+/* .p-4 */
+.p-4 {
+  padding: 1rem;
+}
+
+/* .peer-checked:bg-emerald-600 */
+.peer-checked\:bg-emerald-600:checked {
+  background-color: #2ece71;
+}
+
+/* .peer-checked:text-white */
+.peer-checked\:text-white:checked {
+  color: #fff;
+}
+
 /**
  * Reset form element properties that are easy to forget to
  * style explicitly so you don't inadvertently introduce
@@ -702,6 +1149,11 @@ video {
   height: 80px;
 }
 
+
+.h-1\/3{
+  height: 33%
+}
+
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -787,6 +1239,10 @@ video {
 
 .mt-13{
   margin-top: 52px;
+}
+
+.mt-14{
+  margin-top: 100px;
 }
 
 .mr-auto{
